# Proyecto-Programacion-ARD

./: AdminArchivos.cpp  AdminArchivos.h  ArchivoPrueba.txt  CMakeLists.txt  Curso.cpp  Curso.h  Documento Corto ARD.docx  Estudiante.cpp  Estudiante.h  Horario.cpp  Horario.h  ListaCursos.cpp  ListaCursos.h  ListaPersona.cpp  ListaPersona.h  Menu.cpp  Menu.h  NodoCurso.cpp  NodoCurso.h  NodoPersona.cpp  NodoPersona.h  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h  SistemaU.cpp  SistemaU.h  main.cpp  ~$cumento Corto ARD.docx
